fix: alignment

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -424,6 +424,7 @@ $product-page-padding-bottom: 80px !default;
       display: flex;
       flex-direction: row;
       gap: var(--#{$cdk}size-8);
+      align-items: center;
       justify-content: space-between;
       width: 100%;
       height: 100%;
